--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <link rel="stylesheet" href="css/style.css">
+<head>    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartão de Crédito UI Design</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <span class="logo">
-                <img src="/img/logo.png" alt="logo da bandeira Master Card">
+                <img src="img/logo.png" alt="logo da bandeira Master Card">
                 <h5>Master Card</h5>
             </span>
-            <img src="/img/chip.png" alt="Chip de cartão de credito" class="chip">
+            <img src="img/chip.png" alt="Chip de cartão de credito" class="chip">
         </header>
 
         <div class="card-details">
